@@ -9,8 +9,8 @@
 #
 # Generated by gnulib-tool.
 #
-# Invoked as: gnulib-tool --import gettext vasnprintf regex atexit save-cwd dirname exit exitfail extensions
-# Reproduce by: gnulib-tool --import --dir=. --lib=libgnu --source-base=lib --m4-base=m4   alloca alloca-opt atexit dirname exit exitfail extensions gettext pathmax regex restrict save-cwd vasnprintf xalloc xgetcwd xsize
+# Invoked as: gnulib-tool --import gettext vasnprintf regex atexit save-cwd dirname exit exitfail extensions fnmatch-posix fnmatch
+# Reproduce by: gnulib-tool --import --dir=. --lib=libgnu --source-base=lib --m4-base=m4   alloca alloca-opt atexit dirname exit exitfail extensions fnmatch fnmatch-posix gettext pathmax regex restrict save-cwd vasnprintf xalloc xgetcwd xsize
 
 AUTOMAKE_OPTIONS = 1.8 gnits
 
@@ -54,6 +54,18 @@ libgnu_a_SOURCES += dirname.h dirname.c basename.c stripslash.c
 libgnu_a_SOURCES += exit.h
 
 libgnu_a_SOURCES += exitfail.h exitfail.c
+
+
+BUILT_SOURCES += $(FNMATCH_H)
+EXTRA_DIST += fnmatch_.h fnmatch_loop.c
+
+# We need the following in order to create an <fnmatch.h> when the system
+# doesn't have one that supports the required API.
+all-local $(libgnu_a_OBJECTS): $(FNMATCH_H)
+fnmatch.h: fnmatch_.h
+	cp $(srcdir)/fnmatch_.h $@-t
+	mv $@-t $@
+MOSTLYCLEANFILES += fnmatch.h fnmatch.h-t
 
 
 libgnu_a_SOURCES += gettext.h
