@@ -1,5 +1,10 @@
 2004-10-05  Derek Price  <derek@ximbiot.com>
 
+	* Makefile.am (fnmatch, fnmatch-posix): Improve comment.
+	* fnmatch.c, fnmatch_loop.c: Update from GNULIB.
+
+2004-10-05  Derek Price  <derek@ximbiot.com>
+
 	* Makefile.am (libcvs_a_SOURCES): Move exit.h to its own section.
 
 2004-10-05  Conrad T. Pino  <Conrad@Pino.com>
